add whaleswap affiliate rewards
