# x/whaleswap/types/params.pb.go
@@ -93,6 +93,11 @@ type Params struct {
 	// arbitrage_ref_denom is the reference denom for measuring arbitrage profit.
 	// Only cycles ending in this denom will be considered for auto-execution.
 	ArbitrageRefDenom string `protobuf:"bytes,10,opt,name=arbitrage_ref_denom,json=arbitrageRefDenom,proto3" json:"arbitrage_ref_denom,omitempty" yaml:"arbitrage_ref_denom"`
+	// ═════ AFFILIATE PARAMETERS ═════
+	// affiliate_fee_pct is the percentage of arbitrage profit sent to the
+	// affiliate address resolved from tx memo dysname. E.g., "0.10" = 10%.
+	// Zero or empty disables affiliate payouts. Must be in range [0, 1).
+	AffiliateFeePct string `protobuf:"bytes,11,opt,name=affiliate_fee_pct,json=affiliateFeePct,proto3" json:"affiliate_fee_pct,omitempty" yaml:"affiliate_fee_pct"`
 }
 
 func (m *Params) Reset()         { *m = Params{} }
@@ -198,6 +203,13 @@ func (m *Params) GetArbitrageRefDenom() string {
 	return ""
 }
 
+func (m *Params) GetAffiliateFeePct() string {
+	if m != nil {
+		return m.AffiliateFeePct
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterEnum("dysonprotocol.whaleswap.v1.ArbitrageMode", ArbitrageMode_name, ArbitrageMode_value)
 	proto.RegisterType((*Params)(nil), "dysonprotocol.whaleswap.v1.Params")
@@ -208,53 +220,54 @@ func init() {
 }
 
 var fileDescriptor_6afa625d503958c8 = []byte{
-	// 723 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x94, 0xcf, 0x6e, 0xe3, 0x54,
-	0x14, 0xc6, 0xe3, 0x99, 0xa1, 0xc3, 0xdc, 0x51, 0xa6, 0xe9, 0x2d, 0xa5, 0x4e, 0x8a, 0xec, 0xc8,
-	0x11, 0x22, 0xad, 0x84, 0xad, 0x14, 0xb1, 0x41, 0x62, 0x11, 0xd7, 0x29, 0x8a, 0x94, 0xa6, 0x91,
-	0xdb, 0xb2, 0xa8, 0x90, 0xae, 0xae, 0xed, 0xe3, 0xd4, 0xaa, 0xed, 0x6b, 0x6c, 0x27, 0x6d, 0x76,
-	0x3c, 0x02, 0x4b, 0x1e, 0x84, 0x87, 0xe8, 0xb2, 0xb0, 0x62, 0x65, 0x50, 0xfb, 0x06, 0x79, 0x02,
-	0xe4, 0x3f, 0xf9, 0x67, 0x28, 0xec, 0x72, 0xce, 0xf7, 0x3b, 0xe7, 0x3b, 0xfa, 0xae, 0x62, 0xf4,
-	0x85, 0x35, 0x8b, 0x98, 0x1f, 0x84, 0x2c, 0x66, 0x26, 0x73, 0x95, 0xbb, 0x1b, 0xea, 0x42, 0x74,
-	0x47, 0x03, 0x65, 0xda, 0x51, 0x02, 0x1a, 0x52, 0x2f, 0x92, 0x33, 0x11, 0x37, 0x36, 0x40, 0x79,
-	0x09, 0xca, 0xd3, 0x4e, 0xe3, 0x93, 0x31, 0x1b, 0xb3, 0x4c, 0x52, 0xd2, 0x5f, 0xf9, 0x44, 0xa3,
-	0x6e, 0xb2, 0xc8, 0x63, 0x11, 0xc9, 0x85, 0xbc, 0x28, 0x24, 0x61, 0xcc, 0xd8, 0xd8, 0x05, 0x25,
-	0xab, 0x8c, 0x89, 0xad, 0x58, 0x93, 0x90, 0xc6, 0x0e, 0xf3, 0x17, 0x7a, 0x4e, 0x2b, 0x06, 0x8d,
-	0x40, 0x99, 0x76, 0x0c, 0x88, 0x69, 0x47, 0x31, 0x99, 0x53, 0xe8, 0xd2, 0x6f, 0x6f, 0xd1, 0xd6,
-	0x28, 0xbb, 0x0e, 0x53, 0xb4, 0x1d, 0xd8, 0xd4, 0xb7, 0x48, 0x00, 0x21, 0x61, 0xb6, 0x0d, 0x21,
-	0xcf, 0x35, 0xb9, 0xf6, 0xfb, 0xe3, 0xba, 0x5c, 0x58, 0xa6, 0x4b, 0xe4, 0x62, 0x89, 0x7c, 0xc2,
-	0x1c, 0x5f, 0x15, 0x1e, 0x12, 0xb1, 0x32, 0x4f, 0xc4, 0x4f, 0x67, 0xd4, 0x73, 0xbf, 0x91, 0x4a,
-	0xf3, 0x92, 0x5e, 0xcd, 0x3a, 0x23, 0x08, 0xcf, 0xd3, 0x1a, 0x7f, 0x8f, 0x76, 0xa6, 0xd4, 0x9d,
-	0x64, 0x07, 0x12, 0x1b, 0x80, 0x04, 0x66, 0xcc, 0xbf, 0x6a, 0x72, 0xed, 0x77, 0xea, 0xd1, 0x3c,
-	0x11, 0xf9, 0x7c, 0xcb, 0x3f, 0x10, 0xe9, 0xf7, 0x5f, 0xbf, 0x44, 0xc5, 0x0d, 0x1a, 0x98, 0xfa,
-	0xf6, 0x92, 0x38, 0x05, 0x18, 0x99, 0x31, 0x76, 0x50, 0x6d, 0x35, 0x14, 0x40, 0xe8, 0x30, 0x8b,
-	0x7f, 0x5d, 0xdc, 0x9e, 0x07, 0x24, 0x2f, 0x02, 0x92, 0xb5, 0x22, 0x20, 0xb5, 0x55, 0xdc, 0xbe,
-	0x5f, 0x76, 0xcd, 0x17, 0x48, 0xbf, 0xfc, 0x29, 0x72, 0x6b, 0x56, 0xa3, 0xac, 0x8b, 0xaf, 0xd1,
-	0x7b, 0xc3, 0xb1, 0x48, 0xec, 0x78, 0xc0, 0x26, 0x31, 0xff, 0xe6, 0xff, 0x5c, 0x16, 0x09, 0xe1,
-	0xdc, 0x65, 0x6d, 0x36, 0x37, 0x40, 0x86, 0x63, 0x5d, 0xe6, 0x0d, 0x3c, 0x45, 0x9f, 0x79, 0x8e,
-	0xef, 0x78, 0x13, 0x8f, 0xa4, 0x5c, 0x00, 0xa1, 0x09, 0x7e, 0x4c, 0x1c, 0xdf, 0x0c, 0x81, 0x46,
-	0xc0, 0x7f, 0x94, 0x25, 0xf5, 0xf5, 0x3c, 0x11, 0x5b, 0xf9, 0xb6, 0xff, 0xa2, 0xcb, 0xa1, 0xd5,
-	0x0b, 0x58, 0x75, 0xd2, 0xf7, 0x48, 0xd1, 0x7e, 0x41, 0x62, 0x15, 0x6d, 0x7b, 0xf4, 0x9e, 0xf8,
-	0x2c, 0x06, 0xe2, 0x82, 0x3f, 0x8e, 0x6f, 0xf8, 0xad, 0x26, 0xd7, 0xae, 0xaa, 0x8d, 0xd5, 0xd3,
-	0x96, 0x00, 0x49, 0xaf, 0x7a, 0xf4, 0x7e, 0xc8, 0x62, 0x18, 0x64, 0x35, 0xfe, 0x01, 0xf1, 0x86,
-	0xcb, 0xcc, 0x5b, 0x62, 0x81, 0x4b, 0x67, 0xc4, 0x00, 0x9b, 0x85, 0x40, 0x4c, 0x97, 0x45, 0xc0,
-	0xbf, 0x6d, 0x72, 0xed, 0x37, 0x6a, 0x6b, 0x9e, 0x88, 0x62, 0x91, 0xc2, 0x0b, 0xa4, 0xa4, 0xef,
-	0x65, 0x92, 0x96, 0x2a, 0x6a, 0x26, 0x9c, 0xa4, 0x7d, 0xec, 0x23, 0xe1, 0x5f, 0x66, 0x5c, 0xe7,
-	0xc7, 0x89, 0x63, 0x65, 0x39, 0xf3, 0x1f, 0x67, 0x1e, 0x87, 0xf3, 0x44, 0xfc, 0xfc, 0x45, 0x8f,
-	0x35, 0x5e, 0xd2, 0x0f, 0xca, 0x4e, 0x83, 0x95, 0x8a, 0x6f, 0xd1, 0x07, 0x1a, 0x1a, 0x4e, 0x1c,
-	0xd2, 0x31, 0x10, 0x8f, 0x59, 0xc0, 0xbf, 0x6b, 0x72, 0xed, 0x0f, 0xc7, 0x87, 0xf2, 0xcb, 0x7f,
-	0x5e, 0xb9, 0xbb, 0x98, 0x38, 0x63, 0x16, 0xa8, 0xf5, 0x79, 0x22, 0xee, 0xe5, 0xa7, 0x6c, 0xae,
-	0x92, 0xf4, 0x2a, 0x5d, 0x27, 0xf1, 0x10, 0xed, 0xae, 0x88, 0x10, 0x6c, 0x62, 0x81, 0xcf, 0x3c,
-	0x1e, 0x65, 0xaf, 0x2d, 0xcc, 0x13, 0xb1, 0x51, 0x5e, 0xb3, 0x84, 0x24, 0x7d, 0x67, 0xd9, 0xd5,
-	0xc1, 0xd6, 0xd2, 0xde, 0xd1, 0x4f, 0x1c, 0xaa, 0x6e, 0xdc, 0x82, 0x05, 0xd4, 0xe8, 0xea, 0x6a,
-	0xff, 0x52, 0xef, 0x7e, 0xd7, 0x23, 0x67, 0xe7, 0x5a, 0x8f, 0x5c, 0x0d, 0x2f, 0x46, 0xbd, 0x93,
-	0xfe, 0x69, 0xbf, 0xa7, 0xd5, 0x2a, 0xf8, 0x00, 0xed, 0x97, 0x74, 0xad, 0x7f, 0xd1, 0x55, 0x07,
-	0x3d, 0xad, 0xc6, 0xe1, 0x3a, 0xda, 0x2b, 0x89, 0x67, 0xdd, 0xe1, 0x55, 0x77, 0x50, 0x7b, 0x85,
-	0xf7, 0xd1, 0x6e, 0x49, 0xea, 0x5e, 0x5d, 0x9e, 0xd7, 0x5e, 0xab, 0xdf, 0x3e, 0x3c, 0x09, 0xdc,
-	0xe3, 0x93, 0xc0, 0xfd, 0xf5, 0x24, 0x70, 0x3f, 0x3f, 0x0b, 0x95, 0xc7, 0x67, 0xa1, 0xf2, 0xc7,
-	0xb3, 0x50, 0xb9, 0x6e, 0x6d, 0x06, 0x68, 0x32, 0x4f, 0xb9, 0x5f, 0xfb, 0x58, 0xc6, 0xb3, 0x00,
-	0x22, 0x63, 0x2b, 0xd3, 0xbf, 0xfa, 0x3b, 0x00, 0x00, 0xff, 0xff, 0x31, 0x11, 0xbc, 0xb9, 0x54,
-	0x05, 0x00, 0x00,
+	// 750 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x94, 0xcd, 0x6e, 0xdb, 0x46,
+	0x10, 0xc7, 0xc5, 0x24, 0x75, 0x93, 0x35, 0x14, 0x2b, 0x9b, 0xba, 0xa6, 0x94, 0x82, 0x14, 0x28,
+	0x14, 0x55, 0x02, 0x94, 0x84, 0x52, 0xf4, 0x52, 0xa0, 0x07, 0xd1, 0x54, 0x0a, 0x01, 0xb2, 0x2c,
+	0x30, 0x76, 0x0f, 0x41, 0x81, 0xc5, 0x92, 0x1c, 0x2a, 0x8b, 0x90, 0x5c, 0x96, 0xa4, 0x64, 0xeb,
+	0xd6, 0x47, 0xe8, 0xb1, 0xaf, 0xd0, 0x7b, 0x1f, 0xc2, 0x47, 0xa3, 0xa7, 0x9e, 0xd8, 0xc2, 0x7e,
+	0x03, 0x3d, 0x41, 0xc1, 0x0f, 0x7d, 0xd1, 0x75, 0x73, 0xd3, 0xce, 0xff, 0x37, 0xf3, 0x1f, 0xcd,
+	0x60, 0x88, 0xbe, 0x72, 0x16, 0x31, 0x0f, 0xc2, 0x88, 0x27, 0xdc, 0xe6, 0x9e, 0x76, 0xf1, 0x9e,
+	0x7a, 0x10, 0x5f, 0xd0, 0x50, 0x9b, 0xf7, 0xb4, 0x90, 0x46, 0xd4, 0x8f, 0xd5, 0x5c, 0xc4, 0xad,
+	0x1d, 0x50, 0x5d, 0x83, 0xea, 0xbc, 0xd7, 0xfa, 0x6c, 0xca, 0xa7, 0x3c, 0x97, 0xb4, 0xec, 0x57,
+	0x91, 0xd1, 0x6a, 0xda, 0x3c, 0xf6, 0x79, 0x4c, 0x0a, 0xa1, 0x78, 0x94, 0x92, 0x34, 0xe5, 0x7c,
+	0xea, 0x81, 0x96, 0xbf, 0xac, 0x99, 0xab, 0x39, 0xb3, 0x88, 0x26, 0x8c, 0x07, 0x2b, 0xbd, 0xa0,
+	0x35, 0x8b, 0xc6, 0xa0, 0xcd, 0x7b, 0x16, 0x24, 0xb4, 0xa7, 0xd9, 0x9c, 0x95, 0xba, 0xf2, 0xfb,
+	0x63, 0xb4, 0x37, 0xc9, 0xbb, 0xc3, 0x14, 0x1d, 0x84, 0x2e, 0x0d, 0x1c, 0x12, 0x42, 0x44, 0xb8,
+	0xeb, 0x42, 0x24, 0x0a, 0x6d, 0xa1, 0xbb, 0xff, 0xba, 0xa9, 0x96, 0x96, 0x59, 0x11, 0xb5, 0x2c,
+	0xa2, 0x1e, 0x73, 0x16, 0xe8, 0xd2, 0x55, 0x2a, 0xd7, 0x96, 0xa9, 0xfc, 0xf9, 0x82, 0xfa, 0xde,
+	0x77, 0x4a, 0x25, 0x5f, 0x31, 0xeb, 0x79, 0x64, 0x02, 0xd1, 0x69, 0xf6, 0xc6, 0x3f, 0xa2, 0x67,
+	0x73, 0xea, 0xcd, 0xf2, 0x06, 0x89, 0x0b, 0x40, 0x42, 0x3b, 0x11, 0x1f, 0xb4, 0x85, 0xee, 0x13,
+	0xfd, 0xd5, 0x32, 0x95, 0xc5, 0xa2, 0xca, 0x1d, 0x44, 0xf9, 0xf3, 0x8f, 0xaf, 0x51, 0xd9, 0x83,
+	0x01, 0xb6, 0x79, 0xb0, 0x26, 0xde, 0x00, 0x4c, 0xec, 0x04, 0x33, 0xd4, 0xd8, 0x24, 0x85, 0x10,
+	0x31, 0xee, 0x88, 0x0f, 0xcb, 0xde, 0x8b, 0x01, 0xa9, 0xab, 0x01, 0xa9, 0x46, 0x39, 0x20, 0xbd,
+	0x53, 0xf6, 0x7e, 0x54, 0x75, 0x2d, 0x0a, 0x28, 0xbf, 0xfd, 0x2d, 0x0b, 0x5b, 0x56, 0x93, 0x3c,
+	0x8a, 0xdf, 0xa1, 0x7d, 0x8b, 0x39, 0x24, 0x61, 0x3e, 0xf0, 0x59, 0x22, 0x3e, 0xfa, 0x98, 0xcb,
+	0x6a, 0x42, 0xb8, 0x70, 0xd9, 0xca, 0x2d, 0x0c, 0x90, 0xc5, 0x9c, 0xb3, 0x22, 0x80, 0xe7, 0xe8,
+	0x0b, 0x9f, 0x05, 0xcc, 0x9f, 0xf9, 0x24, 0xe3, 0x42, 0x88, 0x6c, 0x08, 0x12, 0xc2, 0x02, 0x3b,
+	0x02, 0x1a, 0x83, 0xf8, 0x49, 0x3e, 0xa9, 0x6f, 0x97, 0xa9, 0xdc, 0x29, 0xaa, 0xfd, 0x1f, 0x5d,
+	0x1d, 0x5a, 0xb3, 0x84, 0x75, 0x96, 0xed, 0x23, 0x43, 0x87, 0x25, 0x89, 0x75, 0x74, 0xe0, 0xd3,
+	0x4b, 0x12, 0xf0, 0x04, 0x88, 0x07, 0xc1, 0x34, 0x79, 0x2f, 0xee, 0xb5, 0x85, 0x6e, 0x5d, 0x6f,
+	0x6d, 0x56, 0x5b, 0x01, 0x14, 0xb3, 0xee, 0xd3, 0xcb, 0x31, 0x4f, 0x60, 0x94, 0xbf, 0xf1, 0x4f,
+	0x48, 0xb4, 0x3c, 0x6e, 0x7f, 0x20, 0x0e, 0x78, 0x74, 0x41, 0x2c, 0x70, 0x79, 0x04, 0xc4, 0xf6,
+	0x78, 0x0c, 0xe2, 0xa7, 0x6d, 0xa1, 0xfb, 0x48, 0xef, 0x2c, 0x53, 0x59, 0x2e, 0xa7, 0x70, 0x0f,
+	0xa9, 0x98, 0x87, 0xb9, 0x64, 0x64, 0x8a, 0x9e, 0x0b, 0xc7, 0x59, 0x1c, 0x07, 0x48, 0xfa, 0x8f,
+	0x1c, 0x8f, 0xfd, 0x3c, 0x63, 0x4e, 0x3e, 0x67, 0xf1, 0x71, 0xee, 0xf1, 0x72, 0x99, 0xca, 0x5f,
+	0xde, 0xeb, 0xb1, 0xc5, 0x2b, 0xe6, 0x8b, 0xaa, 0xd3, 0x68, 0xa3, 0xe2, 0x0f, 0xe8, 0x29, 0x8d,
+	0x2c, 0x96, 0x44, 0x74, 0x0a, 0xc4, 0xe7, 0x0e, 0x88, 0x4f, 0xda, 0x42, 0xf7, 0xe9, 0xeb, 0x97,
+	0xea, 0xfd, 0xc7, 0xab, 0xf6, 0x57, 0x19, 0x27, 0xdc, 0x01, 0xbd, 0xb9, 0x4c, 0xe5, 0xc3, 0xa2,
+	0x95, 0xdd, 0x52, 0x8a, 0x59, 0xa7, 0xdb, 0x24, 0x1e, 0xa3, 0xe7, 0x1b, 0x22, 0x02, 0x97, 0x38,
+	0x10, 0x70, 0x5f, 0x44, 0xf9, 0xb6, 0xa5, 0x65, 0x2a, 0xb7, 0xaa, 0x65, 0xd6, 0x90, 0x62, 0x3e,
+	0x5b, 0x47, 0x4d, 0x70, 0x8d, 0x2c, 0x96, 0x5d, 0x19, 0x75, 0x5d, 0xe6, 0x31, 0x9a, 0xc0, 0xfa,
+	0xca, 0xf6, 0xab, 0x57, 0x76, 0x07, 0xb9, 0x73, 0x65, 0x6b, 0xa2, 0xb8, 0xb2, 0x57, 0xbf, 0x08,
+	0xa8, 0xbe, 0xf3, 0x1f, 0xb1, 0x84, 0x5a, 0x7d, 0x53, 0x1f, 0x9e, 0x99, 0xfd, 0x1f, 0x06, 0xe4,
+	0xe4, 0xd4, 0x18, 0x90, 0xf3, 0xf1, 0xdb, 0xc9, 0xe0, 0x78, 0xf8, 0x66, 0x38, 0x30, 0x1a, 0x35,
+	0xfc, 0x02, 0x1d, 0x55, 0x74, 0x63, 0xf8, 0xb6, 0xaf, 0x8f, 0x06, 0x46, 0x43, 0xc0, 0x4d, 0x74,
+	0x58, 0x11, 0x4f, 0xfa, 0xe3, 0xf3, 0xfe, 0xa8, 0xf1, 0x00, 0x1f, 0xa1, 0xe7, 0x15, 0xa9, 0x7f,
+	0x7e, 0x76, 0xda, 0x78, 0xa8, 0x7f, 0x7f, 0x75, 0x23, 0x09, 0xd7, 0x37, 0x92, 0xf0, 0xcf, 0x8d,
+	0x24, 0xfc, 0x7a, 0x2b, 0xd5, 0xae, 0x6f, 0xa5, 0xda, 0x5f, 0xb7, 0x52, 0xed, 0x5d, 0x67, 0x77,
+	0x31, 0x36, 0xf7, 0xb5, 0xcb, 0xad, 0x8f, 0x70, 0xb2, 0x08, 0x21, 0xb6, 0xf6, 0x72, 0xfd, 0x9b,
+	0x7f, 0x03, 0x00, 0x00, 0xff, 0xff, 0x64, 0x90, 0xe2, 0x75, 0xac, 0x05, 0x00, 0x00,
 }
 
 func (m *Params) Marshal() (dAtA []byte, err error) {
@@ -277,6 +290,13 @@ func (m *Params) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if len(m.AffiliateFeePct) > 0 {
+		i -= len(m.AffiliateFeePct)
+		copy(dAtA[i:], m.AffiliateFeePct)
+		i = encodeVarintParams(dAtA, i, uint64(len(m.AffiliateFeePct)))
+		i--
+		dAtA[i] = 0x5a
+	}
 	if len(m.ArbitrageRefDenom) > 0 {
 		i -= len(m.ArbitrageRefDenom)
 		copy(dAtA[i:], m.ArbitrageRefDenom)
@@ -391,6 +411,10 @@ func (m *Params) Size() (n int) {
 		n += 1 + sovParams(uint64(m.ArbitrageMode))
 	}
 	l = len(m.ArbitrageRefDenom)
+	if l > 0 {
+		n += 1 + l + sovParams(uint64(l))
+	}
+	l = len(m.AffiliateFeePct)
 	if l > 0 {
 		n += 1 + l + sovParams(uint64(l))
 	}
@@ -702,6 +726,38 @@ func (m *Params) Unmarshal(dAtA []byte) error {
 				return io.ErrUnexpectedEOF
 			}
 			m.ArbitrageRefDenom = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 11:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field AffiliateFeePct", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowParams
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthParams
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthParams
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.AffiliateFeePct = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
